# agents-nexus

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CLAUDE.md.template  IDEAS.md  INSTALL.md  MAINTAINERS.md  QUICKSTART.md  README.md  README.old.md  README_SETUP_PERSONAL.md  README_SETUP_WORK.md  Taskfile.yml  check-memory.py  docker-compose.work.yml  docker-compose.yml  install.sh  troubleshooting-checklist.md  troubleshooting.md
.claude/: settings.json
agent-runner/: conductor.py  conductor_db.py  conductor_worker.py  requirements.txt  runner.py  spike_inbox_writer.py  spike_mcp_probe.py  spike_proxy_test.py  spike_v2_delivery.py  spike_v3_approver.py  spike_v3_permission.py  test_base_branch_override.py  test_mr_naming.py  test_run_mode.py  test_triage_on_exhaust.py
arbiter/: .gitignore  index.js
commands/: distribute.md
config/: conductor.yaml  workspace-categories.txt
dashboard/: .gitignore
database/: .gitignore  dbmate.ps1  dbmate.sh
docker/: dashboard.Dockerfile  mnemon.Dockerfile  nginx.conf
docs/: agent-bus-instance-addressing.md  agent-bus-roadmap.md  agent-sdk-spike.md  codex-multivendor-plan.md  conductor-design.md  cross-person-setup.md  herdr-linux-setup.md  herdr-plugin-nexus-fleet-design.md  herdr-recover.md  herdr-spike.md  herdr-workflow.md  langfuse-retention.md  linux-mac-parity.md  mini-pc-setup.md  model-routing.md  nexus-reboot-plan.md  onboarding-coworker.md  (+9 more)
muninn/: .gitignore  README.md  Taskfile.yml  config.toml.example  project_idea.md  pyproject.toml
muninn/openspec/changes/rm1-obsidian-pipeline/: design.md  proposal.md  tasks.md
muninn/openspec/changes/rm1-obsidian-pipeline/specs/asset-storage/: spec.md
muninn/openspec/changes/rm1-obsidian-pipeline/specs/drawing-interpretation/: spec.md
muninn/openspec/changes/rm1-obsidian-pipeline/specs/handwriting-ocr/: spec.md
muninn/openspec/changes/rm1-obsidian-pipeline/specs/notebook-conversion/: spec.md
muninn/openspec/changes/rm1-obsidian-pipeline/specs/obsidian-sync/: spec.md
muninn/openspec/changes/rm1-obsidian-pipeline/specs/rm-sync/: spec.md
muninn/src/muninn/: cli.py  config.py  conversion.py  daily.py  db.py  obsidian.py  ocr.py  rm_format.py  rm_sync.py  vision.py
muninn/tests/: test_ocr.py  test_rm_sync_folders.py
spark/: .gitignore  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  quickstart-docker.sh  quickstart.sh
spark/docs/: gitlab-webhook-setup.md  plan-decision-synthesis.md
spark/launchd/: com.guilty-spark.nightly.plist
spark/scripts/: inspect-symbols.py  spark-pipeline.sh  spark-reclaim-fastembed.sh  spark-up.sh
spark/src/spark/: __init__.py  cli.py  config.py  detector.py  github.py  gitlab.py  registry.py  search.py  synthesizer.py  webhook.py
spark/src/spark/indexer/: builder.py  chunker.py  embedder.py  keywords.py  metadata.py  reranker.py  symbol_parser.py
spark/src/spark/server/: mcp_server.py
(+306 files in other folders)
