[project]
name = "muninn"
version = "0.1.0"
description = "Sync and digitize reMarkable 1 notebooks into Obsidian"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.49.0",
    "boto3>=1.38.0",
    "click>=8.1.0",
    "pdf2image>=1.17.0",
    "requests>=2.32.0",
    "rmrl>=0.2.1",
    "rmscene>=0.8.0",
    # rmrl 0.2.1 (abandoned, 2021) imports `pkg_resources` at the top of
    # rmrl/constants.py. setuptools 82+ (Feb 2026) dropped the bundled
    # `pkg_resources` module, breaking every rmrl conversion under
    # Python 3.14. Pin to the last version that still bundles it until
    # rmrl is patched or replaced.
    "setuptools>=80,<82",
]

[project.scripts]
muninn = "muninn.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/muninn"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
]

[tool.uv]
# rmrl pins reportlab<4.0 but 3.x won't build. Override to use 4.x prebuilt wheel.
override-dependencies = ["reportlab>=4.0"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
