[project]
name = "guilty-spark"
version = "0.1.0"
description = "127 Guilty Spark — AI-powered installation index"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.15",
    "litellm>=1.50",
    "fastmcp==3.2.4",
    "pyyaml>=6.0",
    "click>=8.0",
    "pyarrow>=17.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "sentence-transformers>=5.4.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-hcl>=1.2.0",
]

[project.optional-dependencies]
webhook = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
spark = "spark.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spark"]
